--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,25 @@
 ---
+import MainLayout from "../layouts/MainLayout.astro"
+import Cards from "../components/Cards.astro"
 
+const response = await fetch( 'https://pokeapi.co/api/v2/pokemon' )
+const data = await response.json()
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<MainLayout title="Pokemon-Página estática">
+	<h1 class="text-3xl text-center underline">Pokemon - static page</h1>
+	<!-- <ul class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-x-6 gap-y-10">
+		{ data.results.map( ( pokemon ) => <li>{ pokemon.name }</li> ) } 
+	</ul> -->
+	<section 
+		aria-label="pokemon-cards"
+		class="grid grid-cols-1 sm:grid-cols-4 md:grid-cols-6 gap-x-6 gap-y-10 mt-5">
+			{ data.results.map( ( { url, name } ) => 
+				<Cards 
+					url = { url }
+					name = { name }
+				/>
+			)}
+	</section>
+
+</MainLayout>
